--- a/blog/template.mdx
+++ b/blog/template.mdx
@@ -2,7 +2,9 @@
 title: 博客 模版文章
 authors: [didilinkin]
 tags: [template, docusaurus]
-slug: blog-template
+slug: blog-template # url 路径设置
+# 其他配置:
+# https://docusaurus.io/zh-CN/docs/api/plugins/@docusaurus/plugin-content-blog#markdown-front-matter
 ---
 
 ## 博客模版
