--- a/docs/javascript/versions/es-2015.mdx
+++ b/docs/javascript/versions/es-2015.mdx
@@ -2,59 +2,107 @@
 sidebar_position: 1
 sidebar_label: ES 2015(ES6)
 description: ECMAScript 2015(ES6)
-title: ECMAScript 2015
+title: ECMAScript 2015(ES6) 新特性
 ---
 
 <!-- http://blog.ycqupup.com/archives/es6%E6%96%B0%E7%89%B9%E6%80%A7 -->
 
-## ES6 新特性
+## The let keyword
 
-### The let keyword
+<br />
 
-### The const keyword
+## The const keyword
 
-### Arrow Functions
+<br />
 
-### The ... Operator
+## Arrow Functions
 
-### For/of
+<br />
 
-### Map Objects
+## The ... Operator
 
-### Set Objects
+<br />
 
-### Classes
+## For/of
 
-### Promises
+<br />
 
-### Symbol
+## Map Objects
 
-### Default Parameters
+<br />
 
-### Function Rest Parameter
+## Set Objects
 
-### String.includes()
+<br />
 
-### String.startsWith()
+## Classes
 
-### String.endsWith()
+<br />
 
-### Array.from()
+## Promises
 
-### Array keys()
+<br />
 
-### Array find()
+## Symbol
 
-### Array findIndex()
+<br />
 
-### New Math Methods
+## Default Parameters
 
-### New Number Properties
+<br />
 
-### New Number Methods
+## Function Rest Parameter
 
-### New Global Methods
+<br />
 
-### Object entries
+## String.includes()
 
-### JavaScript Modules
+<br />
+
+## String.startsWith()
+
+<br />
+
+## String.endsWith()
+
+<br />
+
+## Array.from()
+
+<br />
+
+## Array keys()
+
+<br />
+
+## Array find()
+
+<br />
+
+## Array findIndex()
+
+<br />
+
+## New Math Methods
+
+<br />
+
+## New Number Properties
+
+<br />
+
+## New Number Methods
+
+<br />
+
+## New Global Methods
+
+<br />
+
+## Object entries
+
+<br />
+
+## JavaScript Modules
+
+<br />
