--- a/docs/javascript/versions/es-2016.mdx
+++ b/docs/javascript/versions/es-2016.mdx
@@ -2,10 +2,14 @@
 sidebar_position: 2
 sidebar_label: ES 2016
 description: ECMAScript 2016
-title: ECMAScript 2016
+title: ECMAScript 2016 新特性
 ---
 
-### JavaScript 指数运算 (\*\*) 和 指数运算符 (\*\*=)
+<!-- http://www.ycqupup.com/archives/es7%E6%96%B0%E7%89%B9%E6%80%A7 -->
+<!-- https://xie.infoq.cn/article/2bc5ec8b9dff76f33b50e6f0a -->
+<!-- https://juejin.cn/post/7149110188404899853 -->
+
+## 1. JavaScript 指数运算 (\*\*) 和 指数运算符 (\*\*=)
 
 在 ES7 中引入了指数运算符，具有与 `Math.pow(..)`等效的计算结果
 
@@ -13,7 +17,6 @@ a \*\* b 指数运算符，它与 `Math.pow(a, b)`相同
 
 ```js
 // x ** y
-
 let squared = 2 ** 2
 // same as: 2 * 2
 
@@ -21,11 +24,59 @@ let cubed = 2 ** 3
 // same as: 2 * 2 * 2
 ```
 
+我们看下幂操作符的基本使用:
+
+```js
+const squared = 3 ** 2; // 9
+
+let num = 3;
+num **= 2;
+console.log(num); // 9
+
+function dist(x, y) {
+  return Math.sqrt(x**2 + y**2);
+}
+```
+
+幂操作符的优先级是非常高的, `** > * > +`
+
+```js
+> 2**2 * 2
+8
+> 2 ** (2*2)
+16
+```
+
 <br />
 
-### JavaScript Array includes()
+## 2. JavaScript Array includes()
 
 `includes()` 函数用来判断一个数组是否包含一个指定的值
+
+* `includes` 查找一个值是否在数组中
+* `includes` 还可以接收两个参数
+  * 第一个表示要查找的值
+  * 第二个表示从数组第 N 个元素开始查找
+
+```js
+[1, 2, 3].includes(3)         //true
+['a', 'b', 'c'].includes('d') //false
+[1, 2, 3].includes(3, 2)  // true
+[1, 2, 3].includes(3, 3)  // false
+[1, 2, 3].includes(3, -1) // true
+[1, 2, NaN].includes(NaN) // true
+```
+
+```js
+> ['a', 'b', 'c'].includes('a') // true
+> ['a', 'b', 'c'].includes('d') // false
+```
+
+看一下 `includes` 的定义:
+
+```js
+Array.prototype.includes(value : any) : boolean
+```
 
 数组 `includes()`方法，用来判断一个数组是否包含一个指定的值，根据情况，如果包含则返回 true, 否则返回 false
 
@@ -37,8 +88,26 @@ if (arr.indexOf(el) !== -1) {
 if (arr.includes(el)) {
   ...
 }
+```
 
-// 如何比较？use SameValueZero
+他们的区别在于, `includes` 可以查找 `NaN`, 而 indexOf 不能:
+
+```js
+> [NaN].includes(NaN)
+true
+> [NaN].indexOf(NaN)
+-1
+```
+
+另外 `include` 是不区分 `+0` 和 `-0` 的:
+
+```js
+> [-0].includes(+0)
+true
+```
+
+如何比较?
+```js
 assert([1, 2, 3].includes(2) === true);
 assert([1, 2, 3].includes(4) === false);
 
@@ -50,3 +119,14 @@ assert([1, 2, +0].includes(-0) === true);
 assert(["a", "b", "c"].includes("a") === true);
 assert(["a", "b", "c"].includes("a", 1) === false);
 ```
+
+### 题外话
+
+`includes()` 的出现, 大大优化了 `array.indexof(element) !== -1` 的判断数据 是否存在的直观方式
+
+|  方法   | 功能  |
+|  ----  | ----  |
+| some  | 判断是否有一个元素符合条件 |
+| every  | 判断是否所有元素符合条件 |
+| findIndex  | 查找符合条件的第一个元素下标	 |
+| find  | 查找符合条件的第一个元素 |
