完成 GitHub Actions文章

--- a/blog/2023/3/17/mdx-blog.mdx
+++ b/blog/2023/3/17/mdx-blog.mdx
@@ -3,6 +3,9 @@ slug: mdx-blog
 title: 使用 MDX编写博客
 authors: [didilinkin]
 tags: [init, mdx]
+# slug: blog-template # url 路径设置
+# 其他配置:
+# https://docusaurus.io/zh-CN/docs/api/plugins/@docusaurus/plugin-content-blog#markdown-front-matter
 ---
 <!-- sweetalert2: https://sweetalert2.github.io/#examples -->
 
