--- a/docs/javascript/array.mdx
+++ b/docs/javascript/array.mdx
@@ -5,6 +5,28 @@ description: JavaScript 数组用于在单一变量中存储多个值
 title: Arrary 数组
 ---
 
+> [参考 MDN](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array)
+
+## shift()
+> 副作用
+
+`shift()` 方法从数组中删除第一个元素，并返回该元素的值, 此方法更改数组的长度
+
+## unshift()
+> 副作用
+
+`unshift()` 方法将一个或多个元素添加到数组的开头，并返回该数组的新长度
+
+## pop()
+> 副作用
+
+`pop()` 方法从数组中删除最后一个元素，并返回该元素的值。此方法会更改数组的长度
+
+## push()
+> 副作用, 返回 `length`数值
+
+`push()` 方法将一个或多个元素添加到数组的末尾，并返回该数组的新长度
+
 ## Array.prototype.at()
 
 `at()` 方法接收一个整数值并返回该索引对应的元素，允许正数和负数
