--- a/blog/2023/4/10/introduction-to-the-various-sects-of-chinese-buddhism.mdx
+++ b/blog/2023/4/10/introduction-to-the-various-sects-of-chinese-buddhism.mdx
@@ -13,6 +13,17 @@ description: 中国佛教的各个宗派
 
 <br />
 
+佛教自从东汉明帝时期传入我国之后，很快就受到了统治阶层和平民阶层的双重欢迎，得到了飞速发展
+
+而在最鼎盛的隋唐时期，一共有多达十个宗派，分别是
+
+大乘八宗——“禅宗、天台宗、华严宗、密宗、法相宗、律宗、三论宗、净土宗”以及小乘二宗——“俱舍宗、成实宗”
+
+<!--truncate-->
+
+
+<br />
+
 ## [大乘佛教八宗](https://zh.wikipedia.org/wiki/%E5%A4%A7%E4%B9%98%E4%BD%9B%E6%95%99) - [大众部](https://zh.wikipedia.org/zh-hans/%E5%A4%A7%E7%9C%BE%E9%83%A8)
 
 | 宗派 | 代表人 | 依据 | 国内发源地 | 形成时间 | 别称 |
