--- a/docs/nodejs/module/index.mdx
+++ b/docs/nodejs/module/index.mdx
@@ -6,7 +6,9 @@ last_update:
 title: 模块化加载 的介绍
 ---
 
-[前端模块化——彻底搞懂AMD、CMD、ESM和CommonJS ](https://www.cnblogs.com/chenwenhao/p/12153332.html)
-[javascript - AMD / CMD / UMD / CommonJS / ES Module/可选链](https://blog.csdn.net/weixin_50402587/article/details/120879919)
-[AMD, CMD, CommonJS, ES Module, UMD](https://juejin.cn/post/6844903663404580878)
-[AMD、CMD、CommonJS和ES Module的理解](https://juejin.cn/post/6947598732237996040)
+## 参考文章
+
+* [前端模块化——彻底搞懂AMD、CMD、ESM和CommonJS ](https://www.cnblogs.com/chenwenhao/p/12153332.html)
+* [javascript - AMD / CMD / UMD / CommonJS / ES Module/可选链](https://blog.csdn.net/weixin_50402587/article/details/120879919)
+* [AMD, CMD, CommonJS, ES Module, UMD](https://juejin.cn/post/6844903663404580878)
+* [AMD、CMD、CommonJS和ES Module的理解](https://juejin.cn/post/6947598732237996040)
