新增部分文章

--- a/docs/javascript/versions/es-2023.mdx
+++ b/docs/javascript/versions/es-2023.mdx
@@ -404,3 +404,8 @@ console.log("JavaScript");
 ```
 
 注意，还需修改脚本文件的权限 `chmod +x index.js`, 否则执行会报 `permission denied: ./index.js` 错误
+
+
+## 参考链接
+
+* [ECMAScript 2023 有哪些更新?](https://mp.weixin.qq.com/s/zLH9WzojTvtCo5xNjEdH9Q)
