--- a/docs/plugins-and-libraries/index.mdx
+++ b/docs/plugins-and-libraries/index.mdx
@@ -5,7 +5,18 @@ description: 优秀、无依赖的插件和库
 title: 优秀、无依赖的插件和库
 ---
 
-> [参考 - 工作中经常用到github上优秀、实用、轻量级、无依赖的插件和库](https://github.com/jawil/blog/issues/10)
+## 常用工具库
+* lodash 一个一致性、模块化、高性能的 JavaScript 实用工具库
+* xijs 一款面向复杂业务场景的 javascript 工具库
+  * [xijs更新指南](https://mp.weixin.qq.com/s/vZElscIByiFz2TSYcx7r6Q)
+* ramda  一个很重要的库，提供了许多有用的方法，每个 JavaScript 程序员都应该掌握这个工具
+* day.js  一个轻量的处理时间和日期的 JavaScript 库，和 Moment.js 的 API 设计保持完全一样, 体积只有 2kb
+* big.js  一个小型，快速的 JavaScript 库，用于任意精度的十进制算术运算
+* qs  一个 url 参数转化 (parse 和 stringify)的轻量级 js 库
+* decimal.js  实现 JavaScript 的任意精度的十进制类型库
+
+<br />
+## 功能插件
 
 ### swipe - 图片滑动切换效果库
 
@@ -20,3 +31,99 @@ title: 优秀、无依赖的插件和库
 npm install swipe-js
 ```
 
+<br />
+
+## 表单校验
+* Validator.js  一个强大的 js 表单校验库
+* Validate.js  致力于提供一种验证数据的跨框架和跨语言方式的 js 库, 已通过 100% 代码覆盖率的单元测试
+
+<br />
+
+## 表单表格
+* x-spreadsheet  一个基于 web 的简单易用的表格插件
+
+<br />
+
+## 文件处理
+* file-saver  一个在客户端保存文件的解决方案，非常适合在客户端上生成文件的 Web 应用程序
+* js-xlsx  一个强大的解析和编写 excel 文件的库
+
+<br />
+
+## 网络请求
+* Axios  一个基于 Promise 的 HTTP 库，可用在 Node.js 和浏览器上发起 HTTP 请求，支持所有现代浏览器，甚至包括 IE8+
+* Superagent  基于 Ajax 的优化, 可以与 Node.js HTTP 客户端搭配使用
+* fly.js  一个基于 promise 的 http 请求库, 可以用在 node.js, Weex, 微信小程序, 浏览器, React Native 中
+
+
+<br />
+
+## 动画库
+* Anime.js  一个 JavaScript 动画库，可以处理 CSS 属性，单个 CSS 转换, SVG 或任何 DOM 属性以及 JavaScript 对象
+* Velocity  一个高效的 Javascript 动画引擎，与 jQuery 的 $.animate() 有相同的 API, 同时还支持彩色动画、转换、循环、画架、SVG 支持和滚动等效果
+* Vivus  一个零依赖的 JavaScript 动画库，可以让我们用 SVG 制作动画，使其具有被绘制的外观
+* GreenSock JS  一个 JavaScript 动画库，用于创建高性能、零依赖、跨浏览器动画，已在超过 400 万个网站上使用, 并且可以在 React、Vue、Angular 项目中使用
+* Scroll Reveal  零依赖，为 web 和移动浏览器提供了简单的滚动动画，以动画的方式显示滚动中的内容
+* Kute.js  一个强大高性能且可扩展的原生 JavaScript 动画引擎，具有跨浏览器动画的基本功能
+* Typed.js  一个轻松实现打字效果的 js 插件
+* fullPage.js  一个可轻易创建全屏滚动网站的 js 滚动动画库, 兼容性无可替代
+* iscroll  移动端使用的一款轻量级滚动插件
+* swiper.js  一款强大的 js 跨端触摸滑动插件
+* MixItUp  是用于 DOM 操作的高性能，无依赖库，使您能够使用精美的动画过滤，排序，添加和删除 DOM 元素的 js 动画库
+* Lottie  一个用于 Android, ios, Web 和 Windows 的库，用于解析使用 Bodymovin 导出为 json 的 Adobe After Effects 动画，并在移动设备和网络上呈现它们
+
+<br />
+
+## 鼠标/键盘相关
+* KeyboardJS  一个在浏览器中使用的库（与 node.js 兼容）.它使开发人员可以轻松设置键绑定和使用组合键来设置复杂的绑定.
+* SortableJS  功能强大的 JavaScript 拖拽库
+
+
+
+<br />
+
+## 图形/图像处理库
+* html2canvas  一个强大的使用 js 开发的浏览器网页截图工具
+* dom-to-image  一个可以将任意 DOM 节点转换为用 JavaScript 编写的矢量 (SVG)或光栅 (PNG 或 JPEG)图像的库
+* pica  一个在浏览器中调整图像大小，而不会出现像素失真，处理速度非常快的图片处理库
+* Lena.js  一个轻量级的可以给你图像加各种滤镜的 js 库
+* Compressor.js  一个使用本地 canvas.toBlob API 进行图像有损压缩的 js 库
+* Fabric.js  一个易于使用的基于 HTML5 canvas 元素的图片编辑器
+* merge-images  一个将多张图片合并成一张图的 js 插件
+* cropperjs  一款强大的图片裁切库, 支持灵活的图片裁切方式
+* Grade  一个基于图像中的前 2 种主要颜色生成互补渐变背景的库
+
+<br />
+
+## CSS 相关库
+* hover.css 开箱即用的鼠标悬停动画
+* animate.css 一个跨浏览器的简单便捷的 CSS 动画库
+* Magic 集成各种特殊动效的 css 动画库
+* kite 一个兼容性极好且灵活的布局 css 库
+* csshake 一个能够震动和晃动DOM元素的 CSSku 库
+* hint.css 一个用纯 css 和 html 实现的提示库
+
+<br />
+
+
+## 优秀国产项目集合
+
+### 可视化编辑器
+* h5-dooring
+* dooringx
+* v6.dooring
+* mitu
+* watermark-pro
+
+### H5 活动插件
+* lucky-canvas
+
+### 视频播放器
+* JoL-player
+
+<br />
+
+## 参考链接
+
+* [工作中经常用到github上优秀、实用、轻量级、无依赖的插件和库](https://github.com/jawil/blog/issues/10)
+* [总结100+前端优质库,让你成为前端百事通](https://mp.weixin.qq.com/s?__biz=MzU2Mzk1NzkwOA==&mid=2247492204&idx=1&sn=8a77569e6ba32eff5cd7cb8bae7e0771&chksm=fc50fb97cb277281891f1620dc5ab3a05ba687a04dbe6f224479a36c8f7567b1aebf75e67709&scene=178&cur_album_id=1972186128682221573#rd)
