--- a/docs/react/fiber.mdx
+++ b/docs/react/fiber.mdx
@@ -1,12 +1,11 @@
 ---
 sidebar_position: 1
 sidebar_label: Fiber
-description: "React fiber."
+description: "React fiber"
+title: 'React Fiber'
 last_update:
   author: 哈希肯
 ---
-
-# React Fiber
 
 Fiber 是 React 中的一个 **工作单元**
 
