--- a/docs/typescript/version/ts-4-0.mdx
+++ b/docs/typescript/version/ts-4-0.mdx
@@ -80,3 +80,7 @@ TypeScript 现可识别 JSDoc / TSDoc `@deprecated` 标签
 type Test = string;
 const test: Test = 'dfadsf'; // Type error: 'Test' is deprecated.
 ```
+
+## 参考链接
+
+* [TypeScript 4.0 RC发布, 带来诸多更新](https://mp.weixin.qq.com/s/0Ecl2qaeqXm0-z9ajk2GCw)
