添加 部署配置内容

--- a/blog/2023/4/19/index.mdx
+++ b/blog/2023/4/19/index.mdx
@@ -1,16 +1,26 @@
 ---
-title: 出现 "algoliasearch.exceptions.RequestException Method not allowed with this API key" 的解决方法
+title: 在 Docusaurus v2 中使用 Algolia DocSearch搜索功能
 authors: [didilinkin]
 tags: [
   github actions,
+  algolia,
+  docusaurus-2,
 ]
 slug: algoliasearch
-description: 出现 "algoliasearch.exceptions.RequestException Method not allowed with this API key" 的解决方法
+description: 在 Docusaurus v2 中使用 Algolia DocSearch搜索功能
 ---
 
 ## 第一个问题
 algoliasearch.exceptions.RequestException: Method not allowed with this API key
 
+<!--truncate-->
+
+
+<br />
+
 ## 第二个问题
 Crawling issue: nbHits 0 for didilinkin-website
 Error: Process completed with exit code 3.
+
+
+docusaurus v2中的配置文件: [docsearch-configs.json](https://github.com/algolia/docsearch-configs/blob/master/configs/docusaurus-2.json)
