优化导航栏 svg图表样式

--- a/docs/server/nginx/base.mdx
+++ b/docs/server/nginx/base.mdx
@@ -26,15 +26,18 @@ cat /var/log/nginx/error.log
 ## 功能类型
 
 ### 匹配
+
 * [一文弄懂Nginx的location匹配](https://segmentfault.com/a/1190000013267839)
 
-### `rewrite` 功能
+<br />
+
+### *rewrite* 功能
 
 * [第七章: Nginx的rewrite规则详解](https://www.jianshu.com/p/3b2345f7347d)
 
 <br />
 
-### `resolver` 功能
+### *resolver* 功能
 
 :::info
 
@@ -54,7 +57,7 @@ cat /var/log/nginx/error.log
 
 <br />
 
-### `location 正则表达式 匹配` 功能
+### *location* 正则表达式 匹配功能
 
 * [nginx 常见正则匹配符号表示](https://www.cnblogs.com/netsa/p/6383094.html)
 * [Nginx——location匹配与在配置中的优先级](https://www.cnblogs.com/zjfjava/p/10760157.html)
@@ -63,14 +66,14 @@ cat /var/log/nginx/error.log
 
 <br />
 
-### `listen`功能
+### *listen* 功能
 
 * [了解Nginx'listen'指令的不同值](https://www.it-swarm.cn/zh/nginx/%E4%BA%86%E8%A7%A3nginx%27listen%27%E6%8C%87%E4%BB%A4%E7%9A%84%E4%B8%8D%E5%90%8C%E5%80%BC/960103016/)
 
 
 <br />
 
-### `autoindex` 功能
+### *autoindex* 功能
 
 * `autoindex off` 禁止目录访问
 
